force-app/main/default/objects/EYI_SubProject__c/EYI_SubProject__c.object-meta.xml
<CustomObject>
    <label>Cluster Name</label>
    <nameField>
        <label>SubProject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cluster Name</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>