force-app/main/default/objects/EYI_SubProject__c/fields/EYI_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Name</label>
    <referenceTo>EYI_Project__c</referenceTo>
    <relationshipName>SubProjects</relationshipName>
    <type>Lookup</type>
</CustomField>