force-app/main/default/objects/EYI_SubProject__c/fields/EYI_SubProject_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_SubProject_Number__c</fullName>
    <externalId>true</externalId>
    <label>SubProject Number</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>