force-app/main/default/objects/EYI_SubProject__c/fields/EYI_SubProject_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_SubProject_Property_Type__c</fullName>
    <label>SubProject Property Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartments</fullName>
            </value>
            <value>
                <fullName>Offices</fullName>
            </value>
            <value>
                <fullName>Plots</fullName>
            </value>
            <value>
                <fullName>Shops</fullName>
            </value>
            <value>
                <fullName>Villas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>