force-app/main/default/objects/EYI_SubProject__c/fields/EYI_SubProject_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_SubProject_Start_Date__c</fullName>
    <label>SubProject Start Date</label>
    <type>Date</type>
</CustomField>