force-app/main/default/objects/EYI_SubProject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>EYI_Project_Name__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>